--- a/.github/workflows/deploy_to_render.yml
+++ b/.github/workflows/deploy_to_render.yml
@@ -1,12 +1,9 @@
 name: Deploy Nomi to Render
 
 on:
+  push:
+    - main
   workflow_dispatch:
-    inputs:
-      environment:
-        description: 'The Name of your Nomi'
-        required: true
-        default: ''
 
 jobs:
   deploy-nomi:
@@ -15,39 +12,40 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # - name: Validate Environment Secrets
-      #   env: ${{ secrets }}
-      #   run: |
-      #     MISSING_VARS=0
-      #     # Check if DISCORD_API_KEY is populated
-      #     if [ -z "$DISCORD_API_KEY" ]; then
-      #       echo "Error: DISCORD_API_KEY is not set or is empty. Please add it to your repository secrets."
-      #       ((MISSING_VARS++)) ||:
-      #     else
-      #       echo "DISCORD_API_KEY is set."
-      #     fi
-      #     # Check if RENDER_API_KEY is populated
-      #     if [ -z "$RENDER_API_KEY" ]; then
-      #       echo "Error: RENDER_API_KEY is not set or is empty. Please add it to your repository secrets."
-      #       ((MISSING_VARS++)) ||:
-      #     else
-      #       echo "RENDER_API_KEY is set."
-      #     fi
-      #     # Check if NOMI_API_KEY is populated
-      #     if [ -z "$NOMI_API_KEY" ]; then
-      #       echo "Error: NOMI_API_KEY is not set or is empty. Please add it to your repository secrets."
-      #       ((MISSING_VARS++)) ||:
-      #     else
-      #       echo "NOMI_API_KEY is set."
-      #     fi
-      #     # Check if NOMI_ID is populated
-      #     if [ -z "$NOMI_ID" ]; then
-      #       echo "Error: NOMI_ID is not set or is empty. Please add it to your repository secrets."
-      #       ((MISSING_VARS++)) ||:
-      #     else
-      #       echo "NOMI_ID is set."
-      #     fi
-      #     exit $MISSING_VARS
+      - name: Validate Environment Secrets
+        env:
+          ${{ secrets }}
+        run: |
+          MISSING_VARS=0
+          # Check if DISCORD_API_KEY is populated
+          if [ -z "$DISCORD_API_KEY" ]; then
+            echo "Error: DISCORD_API_KEY is not set or is empty. Please add it to your repository secrets."
+            ((MISSING_VARS++)) ||:
+          else
+            echo "DISCORD_API_KEY is set."
+          fi
+          # Check if RENDER_API_KEY is populated
+          if [ -z "$RENDER_API_KEY" ]; then
+            echo "Error: RENDER_API_KEY is not set or is empty. Please add it to your repository secrets."
+            ((MISSING_VARS++)) ||:
+          else
+            echo "RENDER_API_KEY is set."
+          fi
+          # Check if NOMI_API_KEY is populated
+          if [ -z "$NOMI_API_KEY" ]; then
+            echo "Error: NOMI_API_KEY is not set or is empty. Please add it to your repository secrets."
+            ((MISSING_VARS++)) ||:
+          else
+            echo "NOMI_API_KEY is set."
+          fi
+          # Check if NOMI_ID is populated
+          if [ -z "$NOMI_ID" ]; then
+            echo "Error: NOMI_ID is not set or is empty. Please add it to your repository secrets."
+            ((MISSING_VARS++)) ||:
+          else
+            echo "NOMI_ID is set."
+          fi
+          exit $MISSING_VARS
 
       - name: Validate API Keys
         env:
