--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -18,8 +18,6 @@ jobs:
       # Checkout the development repo
       - name: Checkout Development Repository
         uses: actions/checkout@v4
-        with:
-            fetch-depth: 0  # Fetch the full history to ensure all commits are available
 
       - name: Set up SSH
         run: mkdir -p ~/.ssh
@@ -51,28 +49,28 @@ jobs:
       - name: Clean Production Repository
         run: |
 
+          # Find files that aren't the .git folder, and delete
           find prod/ -mindepth 1 -not -path "prod/.git" -not -path "prod/.git/*" -exec rm -rf {} +
-          # find prod/ -mindepth 1 ! -path 'prod/.git/*' -exec sh -c 'echo "Removing: $1" && rm -rf "$1"' _ {} \;
+          # Copy over everything except the .git folder
           rsync -ah --exclude='.git' --exclude='prod' ./ prod/
 
       # Prepare the Production Repository for Release
       - name: Prepare for Release
         run: |
 
-          # Prepare files for commit to the Production Repository
-          if [[ ! -f "$README" ]]; then
-              echo "Unable to find readme file"
-              exit 1
-          fi
-
-          FILES=("$README" "$INSTALL" "$UPDATE")
-
+          # Prepare files to commit to the Production Repository
           # Remove warning from readme
           sed -i '3,4d' "prod/$README"
           sed -i '/^$/N;/^\n$/D' "prod/$README"
 
+          FILES=("$README" "$INSTALL" "$UPDATE")
+
           # Replace URLs from dev repo with URLs from prod repo
           for FILE in "${FILES[@]}"; do
+              if [[ ! -f "$FILE" ]]; then
+                  echo "Unable to find $FILE"
+                  exit 1
+              fi
               sed -i 's|https://github.com/toru173/nomi-discord-python-development|https://github.com/myakirimiya/nomi-discord-python|g' "prod/$FILE"
           done
 
